refactor: mapper de usuario e adicao de lib para logs