@@ -1,15 +1,15 @@
 package run.example.agregador_investimentos.Service;
 
-import org.springframework.http.ResponseEntity;
-import org.springframework.security.crypto.bcrypt.BCrypt;
-import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
+import org.apache.logging.log4j.LogManager;
+import org.apache.logging.log4j.Logger;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.stereotype.Service;
-import run.example.agregador_investimentos.Domain.Usuario.RequestUsuario;
-import run.example.agregador_investimentos.Domain.Usuario.ResponseUsuario;
+import run.example.agregador_investimentos.Domain.Usuario.DTOs.RequestUsuario;
+import run.example.agregador_investimentos.Domain.Usuario.DTOs.ResponseUsuario;
 import run.example.agregador_investimentos.Domain.Usuario.Usuario;
 import run.example.agregador_investimentos.Exceptions.EmailJaCadastradoException;
 import run.example.agregador_investimentos.Exceptions.ExcecaoUsuarioNaoEncontrado;
+import run.example.agregador_investimentos.Mappers.UsuarioMapper;
 import run.example.agregador_investimentos.Repository.ContaRepository;
 import run.example.agregador_investimentos.Repository.EnderecoCobrancaRepository;
 import run.example.agregador_investimentos.Repository.UsuarioRepository;
@@ -17,7 +17,6 @@ import run.example.agregador_investimentos.Repository.UsuarioRepository;
 import java.util.List;
 import java.util.Optional;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 @Service
 public class UsuarioService {
@@ -29,41 +28,49 @@ public class UsuarioService {
     private EnderecoCobrancaRepository enderecoCobrancaRepository;
     private ContaRepository contaRepository;
     private PasswordEncoder encoder;
+    private UsuarioMapper usuarioMapper;
+    private static final Logger logger = LogManager.getLogger(UsuarioService.class);
 
     public UsuarioService(UsuarioRepository usuarioRepository,
                            EnderecoCobrancaRepository enderecoCobrancaRepository,
                            ContaRepository contaRepository,
-                           PasswordEncoder encoder){
+                           PasswordEncoder encoder,
+                           UsuarioMapper usuarioMapper) {
 
         this.usuarioRepository = usuarioRepository;
         this.enderecoCobrancaRepository = enderecoCobrancaRepository;
         this.contaRepository = contaRepository;
         this.encoder = encoder;
+        this.usuarioMapper = usuarioMapper;
     }
 
     public List<ResponseUsuario> listarUsuarios(){
         List<Usuario> usuarios = usuarioRepository.findAllByActiveTrue();
-        // Entity -> DTO usando Stream API, que pega a lista de entidades e as mapeia para a lista de DTOs de resposta
+        // Stream API para conversão da coleção e Mapper para conversão entre DTO e Entidade
+        logger.debug("Listagem realizada");
         return usuarios.stream()
-                .map(ResponseUsuario::fromEntity)
-                .collect(Collectors.toList());
+                .map(usuarioMapper::entidadeParaDto)
+                .toList();
     }
 
     // Com tipo Optional<T>, retorna DTO de resposta se tiver e Optional.empty() caso não possua
     public Optional<ResponseUsuario> buscarUsuarioPeloId(String idUsuario){
         var usuario = usuarioRepository.findById(UUID.fromString(idUsuario));
-        return usuario.map(ResponseUsuario::fromEntity);
+        return usuario.map(usuarioMapper::entidadeParaDto);
     }
 
     // Retornar somente Id, em vez da DTO. Tampouco, a classe inteira
     public UUID registrarUsuario(RequestUsuario requestUsuario){
         if(this.usuarioRepository.findByEmailUsuario(requestUsuario.emailUsuario()) == null) {
             // DTO -> Entity e criptografia
-            Usuario novoUsuario = new Usuario(requestUsuario);
-            novoUsuario.setSenhaUsuario(encoder.encode(requestUsuario.senhaUsuario()));
+            Usuario novoUsuario = usuarioMapper.dtoParaEntidade(requestUsuario);
 
-            Usuario usuarioSalvo = usuarioRepository.save(novoUsuario);
-            return usuarioSalvo.getIdUsuario();
+            novoUsuario.setSenhaUsuario(encoder.encode(requestUsuario.senhaUsuario()));
+            novoUsuario.setActive(true);
+            novoUsuario.setRole(requestUsuario.roleUsuario());
+
+            usuarioRepository.save(novoUsuario);
+            return novoUsuario.getIdUsuario();
         } else {
             throw new EmailJaCadastradoException("E-mail já está em uso.");
         }
@@ -76,9 +83,8 @@ public class UsuarioService {
             if (usuario.getNomeUsuario() != null &&
                 usuario.getEmailUsuario() != null &&
                 usuario.getSenhaUsuario() != null){
-                usuario.setNomeUsuario(requestUsuario.nomeUsuario());
-                usuario.setEmailUsuario(requestUsuario.emailUsuario());
-                usuario.setSenhaUsuario(requestUsuario.senhaUsuario());
+                // Mapper cuida da cópia e Service da regra
+                usuarioMapper.atualizarEntidade(requestUsuario, usuario);
             }
             usuario.setSenhaUsuario(
                     encoder.encode(requestUsuario.senhaUsuario())
